--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -663,7 +663,7 @@ hr.no-margin {
 .section {
 	position: relative;
 	min-height: 50px;
-	padding: 30px 0;
+	padding: 60px 0;
 }
 
 .icon,
@@ -5658,6 +5658,7 @@ body.always-mobile .fixed-menu .navigation-header.white-dropdown .navigation-bar
 	background-repeat: no-repeat;
 	background-position: top center;
 	background-attachment: fixed;
+	border-bottom:solid 3px orange;
 }
 
 .about-section .howitworks {
@@ -5671,7 +5672,7 @@ body.always-mobile .fixed-menu .navigation-header.white-dropdown .navigation-bar
 
 .features-section {
 	margin-bottom: 50px;
-	padding: 0 0 30px;
+	padding: 30px 0 30px;
 	background-color: #f0f0f0;
 }
 
@@ -5742,6 +5743,8 @@ body.always-mobile .fixed-menu .navigation-header.white-dropdown .navigation-bar
 	background-attachment: fixed;
 	overflow: hidden;
 	padding: 20px 0 0;
+	border-top:solid 3px orange;
+	border-bottom:solid 3px orange;
 }
 
 .feedback-section .section-header {
