--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4443,7 +4443,8 @@ td.cart-list-item-price {
 	background-size: cover;
 	/*background: #6f186c url("../img/background/low_poly_background.jpg") top center no-repeat;*/
 	background: #060028;
-	border-bottom: solid 3px orange;
+	/*border-bottom: solid 3px orange;*/
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
 }
 
 .navigation-header .navigation-brand {
@@ -4470,7 +4471,7 @@ td.cart-list-item-price {
 
 .navigation-header .navigation-brand .brand-logo .logo.logo-alt {
 	display: none;
-	background-image: url("../img/logo-inverted.png");
+	background-image: url("../img/packt/mapt.png");
 }
 
 .navigation-header .navigation-brand .brand-logo h4 {
