--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5415,7 +5415,7 @@ body.always-mobile .fixed-menu .navigation-header.white-dropdown .navigation-bar
 
 .form-section4 {
 	/*background-image: url("../img/background/form-bg4.jpg");*/
-		background-image: url("../img/packt/mapt-dk.png");
+		background-image: url("../img/background/map-bgdk.png");
 }
 
 .lead-generation1 {
